feat: stats endpoint
